--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -12,7 +12,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
                     <i class="bi bi-controller" aria-hidden="true"></i>
-                    <span>The Game</span>
+                    <span>Random album</span>
                 </a>
             </li>
             <li class="nav-item">
