album of the day is the main page

--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -11,6 +11,12 @@
         <ul id="primary-nav" class="nav-list">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
+                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
+                    <span>Album of the Day</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="game.html">
                     <i class="bi bi-controller" aria-hidden="true"></i>
                     <span>Random album</span>
                 </a>
@@ -19,12 +25,6 @@
                 <a class="nav-link" href="statistics.html">
                     <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
                     <span>Statistics</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="album-of-the-day.html">
-                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                    <span>Album of the Day</span>
                 </a>
             </li>
         </ul>
