--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -39,7 +39,7 @@
             Log out
         </button>
         <div class="user-profile" id="user-profile" style="display:none">
-            <img id="user-avatar" class="user-avatar" alt="Avatar" />
+            <img id="user-avatar" class="user-avatar" alt="Avatar" referrerpolicy="no-referrer" crossorigin="anonymous" />
             <span id="user-name"></span>
         </div>
     </div>
