--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -1,9 +1,5 @@
 <header class="header">
-    <div class="logo">
-        <i class="bi bi-vinyl-fill"></i>
-        <h1>AlbumGuessr</h1>
-    </div>
-    <nav class="site-nav" aria-label="Primary">
+    <div class="topbar">
         <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
             <i class="bi bi-list" aria-hidden="true"></i>
             <span class="visually-hidden">Menu</span>
@@ -11,38 +7,44 @@
         <ul id="primary-nav" class="nav-list">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                    <span>Album of the Day</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="game.html">
                     <i class="bi bi-controller" aria-hidden="true"></i>
                     <span>Random album</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="statistics.html">
-                    <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
-                    <span>Statistics</span>
+                <a class="nav-link" href="album-of-the-day.html">
+                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
+                    <span>Album of the Day</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="statistics.html">
+                    <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
+                    <span>My statistics</span>
+                </a>
+            </li>
+
+            <li>
+                <button class="footer-button" id="btn-login">
+                    <i class="bi bi-box-arrow-in-right"></i>
+                    Log in
+                </button>
+                <button class="footer-button" id="btn-logout" style="display:none">
+                    <i class="bi bi-box-arrow-right"></i>
+                    Log out
+                </button>
+               
+            </li>
+                <li class="user-profile" id="user-profile" style="display:none">
+                    <img id="user-avatar" class="avatar" alt="Avatar"/>
+                    <!-- <span id="user-name"></span> -->
+                </li>
         </ul>
-    </nav>
-    <div class="auth-controls">
-        <button class="footer-button" id="btn-login">
-            <i class="bi bi-box-arrow-in-right"></i>
-            Log in
-        </button>
-        <button class="footer-button" id="btn-logout" style="display:none">
-            <i class="bi bi-box-arrow-right"></i>
-            Log out
-        </button>
-        <div class="user-profile" id="user-profile" style="display:none">
-            <img id="user-avatar" class="user-avatar" alt="Avatar" referrerpolicy="no-referrer" crossorigin="anonymous" />
-            <span id="user-name"></span>
-        </div>
     </div>
+    <div class="logo">
+        <img src="../img/logo.png" style="width:300px">
+    </div>
+    
 </header>
 
 
