--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -7,14 +7,14 @@
         <ul id="primary-nav" class="nav-list">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="bi bi-controller" aria-hidden="true"></i>
-                    <span>Random album</span>
+                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
+                    <span>Album of the Day</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="album-of-the-day.html">
-                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                    <span>Album of the Day</span>
+                <a class="nav-link" href="game.html">
+                    <i class="bi bi-controller" aria-hidden="true"></i>
+                    <span>Random album</span>
                 </a>
             </li>
             <li class="nav-item">
