modification index.html et footer et CSS

--- a/frontend/partials/footer.html
+++ b/frontend/partials/footer.html
@@ -1,11 +1,20 @@
-<footer class="footer">
-    <button class="footer-button" id="instructions-button">
+<footer id="footer">
+    <div class="contenu">
+    <div class="gauche">
+         <button class="footer-button" id="instructions-button">
         <i class="bi bi-question-circle"></i>
         How to play
     </button>
-    <div class="footer-text">
+    </div>
+    <div class="centre">
+       
+    </div>
+    <div class="droite">
+        <div class="footer-text">
         <p>A musical deduction game • Inspired by <a href="https://1jour1film.fr" target="_blank">1jour1film</a></p>
     </div>
+    </div>
+  </div>   
 </footer>
 
 
