add profile page

--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -25,7 +25,9 @@
     <div class="droite">
         <ul id="primary-nav" class="nav-list">
              <li class="user-profile" id="user-profile" style="display:none">
-            <img id="user-avatar" class="avatar" alt="Avatar"/>
+            <a href="profile.html" class="avatar-link" title="View Profile">
+                <img id="user-avatar" class="avatar" alt="Avatar"/>
+            </a>
              <!-- <span id="user-name"></span> -->
             </li>
              <li class="nav-item">
