--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -1,29 +1,31 @@
 <header>
   <div class="contenu">
     <div class="gauche">
-        <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
-            <i class="bi bi-list" aria-hidden="true"></i>
-            <span class="visually-hidden">Menu</span>
-        </button>
+        <nav class="site-nav">
+            <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav">
+                <i class="bi bi-list" aria-hidden="true"></i>
+                <span class="visually-hidden">Menu</span>
+            </button>
+            <ul id="primary-nav" class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">
+                        <i class="bi bi-calendar-event" aria-hidden="true"></i>
+                        <span>Album of the Day</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="game.html">
+                        <i class="bi bi-controller" aria-hidden="true"></i>
+                        <span>Random album</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
     <div class="centre">
-        <ul id="primary-nav" class="nav-list">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <i class="bi bi-calendar-event" aria-hidden="true"></i>
-                    <span>Album of the Day</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="game.html">
-                    <i class="bi bi-controller" aria-hidden="true"></i>
-                    <span>Random album</span>
-                </a>
-            </li>
-        </ul>
     </div>
     <div class="droite">
-        <ul id="primary-nav" class="nav-list">
+        <ul class="nav-list">
              <li class="user-profile" id="user-profile" style="display:none">
             <a href="profile.html" class="avatar-link" title="View Profile">
                 <img id="user-avatar" class="avatar" alt="Avatar"/>
