fix avatar style bug

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -190,10 +190,12 @@ header .contenu {
 
     .avatar{
         width: 30px;
+        height: 30px;
         margin:0px;
         padding:0px;
         border-radius: 50%;
         vertical-align: middle;
+        object-fit: cover;
     }
 
 /* Inline subtitle inside status bar */
