--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -19,6 +19,12 @@
                         <span>Random album</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ranking.html">
+                        <i class="bi bi-trophy" aria-hidden="true"></i>
+                        <span>Ranking</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
