--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -25,6 +25,12 @@
                         <span>Ranking</span>
                     </a>
                 </li>
+                <li class="nav-item" id="nav-statistics" style="display:none">
+                    <a class="nav-link" href="statistics.html">
+                        <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
+                        <span>My statistics</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -38,12 +44,6 @@
                 
             </a>
             <span id="user-name" class="user-name"></span>
-            </li>
-             <li class="nav-item">
-                <a class="nav-link" href="statistics.html">
-                    <i class="bi bi-bar-chart-line" aria-hidden="true"></i>
-                    <span>My statistics</span>
-                </a>
             </li>
             <li>
                 <button class="footer-button" id="btn-login">
