fix avatar display

--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -40,7 +40,7 @@
         <ul class="nav-list">
              <li class="user-profile" id="user-profile" style="display:none">
             <a href="profile.html" class="avatar-link" title="View Profile">
-                <img id="user-avatar" class="avatar" alt="Avatar"/>
+                <img id="user-avatar" class="avatar" alt="Avatar" crossorigin="anonymous"/>
                 
             </a>
             <span id="user-name" class="user-name"></span>
