--- a/frontend/partials/footer.html
+++ b/frontend/partials/footer.html
@@ -11,7 +11,7 @@
     </div>
     <div class="droite">
         <div class="footer-text">
-        <p>A musical deduction game • Inspired by <a href="https://1jour1film.fr" target="_blank">1jour1film</a></p>
+        <p>A musical deduction game • Inspired by <a href="https://1jour1film.fr" target="_blank" id="footer-1j1f-link">1jour1film</a></p>
     </div>
     </div>
   </div>   
